style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Helvetica, sans-serif;
}

body {
    height: 100vh;
    display: flex;
    flex-direction: column;
}

.quote-container {
    background-color: #E5E7EB;
}

a {
    text-decoration : none;
}

.hero-text p, .links a {
    color: #E5E7EB;
    font-size: 18px;
}

.header strong {
    color: #F9FAF8;
    font-size: 24px;
}

.hero-text h1 {
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 800;
}

li {
    list-style: none;
}

button, .call-to-action {
    background-color: #3882F6;
}

.hero-img img {
    width: 500px;
}

button {
    cursor: pointer;
    color: white;
    border: 1px solid #3882F6;
    padding: 5px 10px;
    border-radius: 5px;
    font-weight: bold;
}

.hero {
    display: flex;
    gap: 15px;
}

.call-right button {
    border: 1px solid white;
}

.top, .footer {
    background-color: #1F2937;
}

.top {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    padding-left: 100px;
    padding-right: 100px;
    padding-top: 20px;
    padding-bottom: 100px;
    gap: 40px;
}

.links {
    display: flex;
    gap: 18px;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

